[package]
name = "aerondight"
version = "0.1.0"
authors = ["adiatma <adiatma9024@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
tokio = { version = "1.7.0", features = ["full"] }
error-chain = "0.12.4"
indicatif = "0.16.2"
